@@ -7,6 +7,18 @@ plugins {
 group 'dk.xpreuss.xperimentering'
 version '0.1.0-SNAPSHOT'
 
+//sourceCompatibility = JavaVersion.VERSION_16
+//targetCompatibility = JavaVersion.VERSION_14
+java.toolchain.languageVersion = JavaLanguageVersion.of(16)
+java {
+	//sourceCompatibility = JavaVersion.VERSION_16
+	//targetCompatibility = JavaVersion.VERSION_16
+	/*
+	toolchain {
+		languageVersion.set(JavaLanguageVersion.of(16))
+	}
+	*/
+}
 application {
 	applicationDefaultJvmArgs = ["--add-opens", "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"]
 }
@@ -36,8 +48,12 @@ repositories {
 	mavenCentral()
 }
 
-
-mainClassName = "dk.xpreuss.xperimentering.Main"
+application {
+	//applicationDefaultJvmArgs = ["--add-opens java.base/jdk.internal.loader=ALL-UNNAMED"]
+	//jvmArgs = ['-Xmx4096m','--add-opens java.base/jdk.internal.loader=ALL-UNNAMED']
+	//mainClassName='dk.xpreuss.utils.formatter.custom.MessageFormatter'
+	mainClass='dk.xpreuss.utils.formatter.custom.MessageFormatter'
+}
 
 dependencies {
 	implementation 'io.reactivex.rxjava3:rxjava:3.0.13-RC4'
@@ -46,6 +62,8 @@ dependencies {
 	implementation 'net.time4j:time4j-tzdata:5.0-2021a'
 	implementation 'net.time4j:time4j-sqlxml:5.8'
 	implementation 'net.time4j:time4j-ui:5.8'
+
+	implementation 'no.gorandalum:fluent-result:1.5.0'
 
 //	compileOnly 'org.projectlombok:lombok:1.18.20'
 //	annotationProcessor 'org.projectlombok:lombok:1.18.20'
@@ -73,10 +91,15 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+/*
+tasks.withType( JavaCompile ).configureEach {
+	options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
+}
+*/
 
 println "GRADLE_OPTS: " + System.getenv("GRADLE_OPTS")
-println "File encoding: " + System.getProperty("file.encoding")
-println "file.encoding sys property = " + System.properties["file.encoding"]
+//println "File encoding: " + System.getProperty("file.encoding")
+//println "file.encoding sys property = " + System.properties["file.encoding"]
 println "GRADLE_OPTS env variable = " + System.getenv("GRADLE_OPTS")
 println "JAVA_TOOL_OPTIONS env variable = " + System.getenv("JAVA_TOOL_OPTIONS")
 println "UTF-8 test: ↓"
